--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@tailwindcss/vite": "^4.0.0",
 		"bits-ui": "^2.7.0",
 		"clsx": "^2.1.1",
+		"drizzle-kit": "^0.31.1",
 		"eslint": "^9.18.0",
 		"eslint-plugin-svelte": "^3.0.0",
 		"globals": "^16.0.0",
@@ -41,6 +42,7 @@
 		"@types/bun": "^1.2.16",
 		"@types/jsonwebtoken": "^9.0.10",
 		"bcrypt": "^6.0.0",
+		"drizzle-orm": "^0.44.2",
 		"jsonwebtoken": "^9.0.2"
 	}
 }
