--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"vite": "^6.2.6"
 	},
 	"dependencies": {
+		"@sveltejs/enhanced-img": "^0.6.0",
 		"@types/bcrypt": "^5.0.2",
 		"@types/bun": "^1.2.16",
 		"@types/jsonwebtoken": "^9.0.10",
