--- a/package.json
+++ b/package.json
@@ -1,51 +1,53 @@
 {
-	"name": "portal-autarca",
-	"private": true,
-	"version": "0.0.1",
-	"type": "module",
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"prepare": "svelte-kit sync || echo ''",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "eslint ."
-	},
-	"devDependencies": {
-		"@eslint/compat": "^1.2.5",
-		"@eslint/js": "^9.18.0",
-		"@internationalized/date": "^3.8.1",
-		"@lucide/svelte": "^0.515.0",
-		"@sveltejs/adapter-node": "^5.2.12",
-		"@sveltejs/kit": "^2.16.0",
-		"@sveltejs/vite-plugin-svelte": "^5.0.0",
-		"@tailwindcss/vite": "^4.0.0",
-		"bits-ui": "^2.7.0",
-		"clsx": "^2.1.1",
-		"drizzle-kit": "^0.31.1",
-		"eslint": "^9.18.0",
-		"eslint-plugin-svelte": "^3.0.0",
-		"globals": "^16.0.0",
-		"svelte": "^5.0.0",
-		"svelte-check": "^4.2.1",
-		"tailwind-merge": "^3.3.1",
-		"tailwind-variants": "^1.0.0",
-		"tailwindcss": "^4.0.0",
-		"tw-animate-css": "^1.3.4",
-		"typescript": "^5.0.0",
-		"typescript-eslint": "^8.20.0",
-		"vaul-svelte": "^1.0.0-next.7",
-		"vite": "^6.2.6"
-	},
-	"dependencies": {
-		"@sveltejs/enhanced-img": "^0.6.0",
-		"@types/bcrypt": "^5.0.2",
-		"@types/bun": "^1.2.16",
-		"@types/jsonwebtoken": "^9.0.10",
-		"bcrypt": "^6.0.0",
-		"better-sqlite3": "^11.10.0",
-		"drizzle-orm": "^0.44.2",
-		"jsonwebtoken": "^9.0.2"
-	}
+  "name": "portal-autarca",
+  "private": true,
+  "version": "0.0.1",
+  "type": "module",
+  "scripts": {
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview",
+    "prepare": "svelte-kit sync || echo ''",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "lint": "eslint ."
+  },
+  "devDependencies": {
+    "@eslint/compat": "^1.2.5",
+    "@eslint/js": "^9.18.0",
+    "@internationalized/date": "^3.8.1",
+    "@lucide/svelte": "^0.515.0",
+    "@sveltejs/adapter-node": "^5.2.12",
+    "@sveltejs/kit": "^2.16.0",
+    "@sveltejs/vite-plugin-svelte": "^5.0.0",
+    "@tailwindcss/vite": "^4.0.0",
+    "bits-ui": "^2.7.0",
+    "clsx": "^2.1.1",
+    "drizzle-kit": "^0.31.1",
+    "eslint": "^9.18.0",
+    "eslint-plugin-svelte": "^3.0.0",
+    "globals": "^16.0.0",
+    "svelte": "^5.0.0",
+    "svelte-check": "^4.2.1",
+    "tailwind-merge": "^3.3.1",
+    "tailwind-variants": "^1.0.0",
+    "tailwindcss": "^4.0.0",
+    "tw-animate-css": "^1.3.4",
+    "typescript": "^5.0.0",
+    "typescript-eslint": "^8.20.0",
+    "vaul-svelte": "^1.0.0-next.7",
+    "vite": "^6.2.6"
+  },
+  "dependencies": {
+    "@sveltejs/enhanced-img": "^0.6.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/bun": "^1.2.16",
+    "@types/jsonwebtoken": "^9.0.10",
+    "bcrypt": "^6.0.0",
+    "drizzle-orm": "^0.44.2",
+    "jsonwebtoken": "^9.0.2"
+  },
+  "trustedDependencies": [
+    "@tailwindcss/oxide"
+  ]
 }
