--- a/package.json
+++ b/package.json
@@ -44,10 +44,12 @@
     "@types/bun": "^1.2.16",
     "@types/jsonwebtoken": "^9.0.10",
     "bcrypt": "^6.0.0",
+    "better-sqlite3": "^11.10.0",
     "drizzle-orm": "^0.44.2",
     "jsonwebtoken": "^9.0.2"
   },
   "trustedDependencies": [
-    "@tailwindcss/oxide"
+    "@tailwindcss/oxide",
+    "better-sqlite3"
   ]
 }
